--- a/src/main/webapp/media/css/style.css
+++ b/src/main/webapp/media/css/style.css
@@ -1,3 +1,6 @@
+
+/*---HEADER---*/
+
 .page-header{
     background-color: crimson;
     position: absolute;
@@ -16,4 +19,20 @@
     text-align: center;
     padding-top: 17px;
 }
+
+/*---PAGE CONTENT---*/
+
+.pageContainer{
+    left: 0px;
+    background-color: antiquewhite;
+    margin-left: 0px;
+    width: 100%;
+    min-width: 980px;
+    position: absolute;
+    top: 108px;
+    height: 100%;
+}
+
+
+/*---FOOTER---*/
 
