--- a/src/main/webapp/media/css/style.css
+++ b/src/main/webapp/media/css/style.css
@@ -11,9 +11,19 @@
     top: 0px;
     height: 108px;
 }
+.header-container{
+    width: 100%;
+}
+
+.header-main-panel{
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+    background-color: black;
+}
 
 .logoText{
-    color: black;
+    color: white;
     font-size: 30px;
     position: center;
     text-align: center;
@@ -24,7 +34,7 @@
 
 .pageContainer{
     left: 0px;
-    background-color: antiquewhite;
+    background-color: red;
     margin-left: 0px;
     width: 100%;
     min-width: 980px;
