Modified class names and selectors

--- a/src/main/webapp/media/css/style.css
+++ b/src/main/webapp/media/css/style.css
@@ -107,11 +107,11 @@
     background-color: red;
 }
 
-.menu-item{
+.menu-link{
     color: white;
 }
 
-.menu-item:hover{
+.menu-link:hover{
     background-color: crimson;
     color: black;
 }
