--- a/src/main/webapp/media/css/style.css
+++ b/src/main/webapp/media/css/style.css
@@ -223,91 +223,57 @@
 }
 /*---FOOTER---*/
 
-#footer-section {
-    margin: 0;
-    margin-left: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    vertical-align: baseline;
-    background: 0 0;
-    bottom: auto;
-
-    /*bottom: 0;*/
-    left: 0;
+#siteFooter{
     width: 100%;
-    min-width: 980px;
-    position: absolute;
-    top: 927px;
     height: 77px;
-}
-
-.footer-background {
-    left: 0;
-    width: 100%;
-}
-
-.footer-background-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    min-width: 980px;
     background-color: rgba(0, 0, 0, 1);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
-    border-top: 0px solid rgba(0, 0, 0, 1);
-    border-bottom: 0px solid rgba(0, 0, 0, 1);
-}
-
-footer-centered-content {
-    width: 100%;
-}
-
-.footer-inline-content {
-    position: absolute;
-    top: 0;
-    right: 200px;
     bottom: 0;
-    left: 200px;
-}
-
-#LnkBr2 {
-    margin-left: calc((100% - 980px) * 0.5);
-}
-
-.lblitemsContainer {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    white-space: nowrap;
 }
 
-#LnkBr2itemsContainer {
+#copyright{
+    /*margin-top: 23px;*/
+    height: 100%;
+}
+
+#copyrightPar{
+    color: white;
+    margin-top: 23px;
+    font-weight: bold;
+    font-size: 16px;
+    text-align: center;
+}
+
+#links{
+    /*margin-left: calc((100% - 980px) * 0.5);*/
+    width: 250px;
+    right: 0;
+    top: 26px;
+    position: absolute;
+}
+
+#socialMediaList{
     list-style: none;
 }
 
-.lbimageItem {
+.socialMediaItem{
     width: 21px;
     height: 21px;
-    margin-bottom: 0;
     margin-right: 13px;
     display: inline-block;
 }
 
-.imageItemlink {
+.socialMediaItemLink{
     cursor: pointer;
 }
 
-#copyright {
-    left: 600px;
-    top: 29px;
+.socialMediaImageContainer{
     position: absolute;
-    height: 25px;
 }
 
-.cpr {
-    color: white;
-    font-weight: bold;
-    font-size: 13px;
-    text-align: left;
+.socialMediaImageContainer img {
+    width: 21px;
+    height: 21px;
+    object-fit: cover;
 }
